# tonic-server-dispatch

./: Cargo.toml  README.md
examples/: Cargo.toml  build.rs  dict_example.proto
examples/src/: client.rs  server.rs  server_async.rs  server_sync.rs
src/: async.rs  common.rs  lib.rs  sync.rs
