[package]
name = "tonic-server-dispatch"
version = "0.2.1"
edition = "2021"
authors = ["Wu Bingzheng <wubingzheng@gmail.com>"]
description = "A request-dispatch level for tonic-Server."
license = "MIT"
repository = "https://github.com/WuBingzheng/tonic-server-dispatch"
documentation = "https://docs.rs/tonic-server-dispatch"
keywords = ["tonic", "grpc", "rpc-server", "async"]
categories = ["web-programming", "network-programming", "asynchronous"]

[dependencies]
