[package]
name = "dict"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server-async"
path = "src/server_async.rs"

[[bin]]
name = "server-sync"
path = "src/server_sync.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"

tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
paste = "1.0"

tonic-server-dispatch = {version="*", path="../"}

[build-dependencies]
tonic-build = "*"
